# axionvera-network

./: ARCHITECTURE.md  Cargo.toml  Dockerfile  HEALTH_ANALYSIS_REPORT.md  PR_DESCRIPTION.md  README.md  SECURITY.md  SECURITY_PR.md  TESTNET_DEPLOYMENT_IMPLEMENTATION.md  docker-compose.yml  package-lock.json  package.json  tmp_scan_advisories.cjs  tmp_scan_advisories.js  vitest.integration.config.ts
charts/axionvera-node/: .helmignore  Chart.yaml  values.yaml
charts/axionvera-node/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
contracts/accounting/: Cargo.toml
contracts/accounting/src/: lib.rs
contracts/admin/: Cargo.toml
contracts/admin/src/: lib.rs
contracts/assets/: Cargo.toml
contracts/auth/: Cargo.toml
contracts/auth/src/: delegation.rs  lib.rs
contracts/capabilities/: Cargo.toml
contracts/config/: Cargo.toml
contracts/context/: Cargo.toml
contracts/core/: Cargo.toml
contracts/core/src/: lib.rs
contracts/events/: Cargo.toml
contracts/events/src/: lib.rs
contracts/features/: Cargo.toml
contracts/features/src/: events.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/fees/: Cargo.toml
contracts/fees/src/: lib.rs  tests.rs
contracts/integrations/: Cargo.toml
contracts/interfaces/: Cargo.toml
contracts/interfaces/src/: lib.rs
contracts/monitoring/: Cargo.toml
contracts/monitoring/src/: lib.rs  test.rs
contracts/orchestrator/: Cargo.toml
contracts/orchestrator/src/: lib.rs  test.rs
contracts/policy/: Cargo.toml
contracts/registry/: Cargo.toml
contracts/replay/: Cargo.toml
contracts/replay/src/: events.rs  lib.rs  storage.rs  test.rs
contracts/resources/: Cargo.toml
contracts/resources/src/: lib.rs
contracts/rewards/: Cargo.toml
contracts/risk/: Cargo.toml
contracts/risk/src/: lib.rs
contracts/scheduler/: Cargo.toml
contracts/security/: Cargo.toml
contracts/security/src/: lib.rs  test.rs
contracts/snapshots/: Cargo.toml
contracts/snapshots/src/: lib.rs  test.rs
contracts/state/: Cargo.toml
contracts/storage/: Cargo.toml
contracts/storage/src/: lib.rs
contracts/testing/: Cargo.toml
contracts/testing/src/: criteria.rs  lib.rs  report.rs
contracts/treasury/: Cargo.toml
contracts/upgrades/: Cargo.toml
contracts/validator/: Cargo.toml
contracts/validator/src/: lib.rs  test.rs
contracts/vault-contract/: Cargo.toml
contracts/vault-contract-v2/: Cargo.toml
contracts/vault-contract-v2/src/: lib.rs
contracts/vault-contract/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs
contracts/vault-contract/tests/: delegation_test.rs
docs/: MTLS_IMPLEMENTATION.md  MTLS_ROTATION.md  architecture.md  contract-spec.md
docs/fuzz/: SETUP-FUZZING.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_payload.rs
network-node/: Cargo.toml  build.rs
network-node/src/: amazon_eks.rs  chain_params.rs  config.rs  crypto.rs  database.rs  enhanced_server.rs  error.rs  error_middleware.rs  governance.rs  indexer.rs  lib.rs  main.rs  memory_profiling.rs  metrics.rs  server.rs  service_registry.rs  shutdown.rs  soroban_rpc_client.rs  soroban_service.rs  stellar_service.rs  telemetry.rs  tls_utils.rs
network-node/src/grpc/: gateway_service.rs  mod.rs  (+6 more)
network-node/tests/: soroban_integration.rs  tls_handshake.rs
scripts/: DEPLOYMENT_GUIDE.md  QUICK_REFERENCE.md  README.md  create_mtls_branch.sh  deploy-infrastructure.sh  deploy_testnet.sh  rotate_ca.ps1  rotate_ca.sh  security-scan.sh
terraform/: compute.tf  main.tf  monitoring.tf  network.tf  outputs.tf
tests/auth/: Cargo.toml
tests/capabilities/: Cargo.toml
tests/determinism/: Cargo.toml
tests/determinism/src/: lib.rs
tests/determinism/tests/: deterministic_execution.rs
tests/integration/: README.md  network-node.test.ts  setup.ts
tests/invariants/: Cargo.toml
tests/risk/: Cargo.toml
tests/risk/src/: lib.rs
tests/security/: Cargo.toml
(+29 files in other folders)
