[package]
name = "axionvera-orchestrator"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
axionvera-events = { path = "../events" }
axionvera-interfaces = { path = "../interfaces" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
