[package]
name = "axionvera-storage"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
axionvera-events = { path = "../events" }
axionvera-interfaces = { path = "../interfaces" }
axionvera-state = { path = "../state" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
axionvera-state = { path = "../state" }
axionvera-resources = { path = "../resources" }
