[package]
name = "axionvera-treasury"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]

[dependencies]
soroban-sdk = { workspace = true }
axionvera-events = { path = "../events" }
axionvera-interfaces = { path = "../interfaces" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
