[package]
name = "tests-determinism"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
axionvera-testing = { path = "../../contracts/testing" }
axionvera-core = { path = "../../contracts/core" }
axionvera-state = { path = "../../contracts/state" }
axionvera-storage = { path = "../../contracts/storage" }
axionvera-events = { path = "../../contracts/events" }
axionvera-interfaces = { path = "../../contracts/interfaces" }
